# SalviaRenderer

./: .clang-format  .gitattributes  .gitignore  .hgignore  .hgtags  .travis.yml  BOOTSTRAP_SAMPLE.bat  BuildScripts.pyproj  BuildScripts.sln  CMakeLists.txt  CMakePresets.json  CMakePresets_Woodblocks.json  INSTALL  LICENSE  README  README.md  ReleaseNotes  SAMPLE_Build.bat  TODO  bootstrap.py  build.bat  build.py  build_all.py  build_conf.py  build_conf.tmpl  clean_build.bat  clean_build.py  git_authors.txt  git_push.bat  multi_target_build.py  ph  salvia-build.pyproj  salvia-build.sln  vcpkg.json
eflib/: CMakeLists.txt
eflib/src/: CMakeLists.txt  assert.cpp  collision_detection.cpp  cpuinfo.cpp  dl_loader.cpp  initialize.cpp  lifetime_manager.cpp  logrout.cpp  math.cpp  profiler.cpp  quaternion.cpp  string.cpp
salvia/test/: CMakeLists.txt
salvia_d3d_sw_driver/: CMakeLists.txt
salvia_d3d_sw_driver/include/: adapter.h  common.h  device.h  display.h  kmd_adapter.h  kmd_context.h  kmd_device.h  umd_adapter.h  umd_device.h  umd_resource.h
salvia_d3d_sw_driver/src/: adapter.cpp  d3d_sw_driver.def  device.cpp  display.cpp  kmd_adapter.cpp  kmd_context.cpp  kmd_device.cpp  main.cpp  thunks.cpp  umd_adapter.cpp  umd_device.cpp  umd_resource.cpp
salviar/: CMakeLists.txt
salviar/include/: async_object.h  async_renderer.h  binary_modules.h  brand_renderer.h  buffer.h  clipper.h  colors.h  colors_convertors.h  counter.h  decl.h  enums.h  format.h  framebuffer.h  geom_setup_engine.h  handles.h  host.h  index_fetcher.h  input_layout.h  internal_mapped_resource.h  lockfree_queue.h  mapped_resource.h  presenter_dev.h  raster_state.h  rasterizer.h  register_file.h  render_core.h  render_stage.h  render_stages.h  render_state.h  renderer.h  renderer_capacity.h  renderer_impl.h  resource_data.h  resource_manager.h  rfile.h  salviar_forward.h  sampler.h  sampler_api.h  shader.h  shader_abi.h  (+26 more)
salviar/src/: async_renderer.cpp  binary_modules.cpp  brand_renderer.cpp  buffer.cpp  clipper.cpp  color_convertors.cpp  cpp_pixel_shader.cpp  default_vertex_cache.cpp  framebuffer.cpp  geom_setup_engine.cpp  host.cpp  index_fetcher.cpp  input_layout.cpp  pixel_shader.cpp  raster_state.cpp  rasterizer.cpp  render_core.cpp  render_state.cpp  renderer.cpp  renderer_impl.cpp  resource_data.cpp  resource_manager.cpp  result.cpp  rfile.cpp  sampler.cpp  sampler_api.cpp  shader.cpp  shader_abi.cpp  shader_cbuffer.cpp  shader_cbuffer_impl.cpp  shader_code.cpp  shader_object.cpp  shader_unit.cpp  shader_utility.cpp  stream_assembler.cpp  stream_state.cpp  surface.cpp  sync_renderer.cpp  texture2d.cpp  texture_cube.cpp  (+1 more)
salviau/: CMakeLists.txt
salviau/include/: salviau_forward.h
salviax/: CMakeLists.txt
salviax/include/: salviax_forward.h
samples/: CMakeLists.txt  ConfigureSample.cmake
samples/AnisotropicFilter/: AnisotropicFilter.cpp  CMakeLists.txt
samples/AnistropicFilter/: AnistropicFilter.cpp  CMakeLists.txt
samples/AntiAliasing/: AntiAliasing.cpp  CMakeLists.txt
samples/AstroBoy/: AstroBoy.cpp  CMakeLists.txt
samples/BenchmarkComplexMesh/: BenchmarkComplexMesh.cpp  CMakeLists.txt
samples/BenchmarkPartOfSponza/: BenchmarkPartOfSponza.cpp  CMakeLists.txt
samples/BenchmarkSponza/: BenchmarkSponza.cpp  CMakeLists.txt
samples/ColorizedTriangle/: CMakeLists.txt  ColorizedTriangle.cpp  ColorizedTriangle.h  ColorizedTriangle.rc  ColorizedTriangleView.h  MainFrm.h  resource.h  stdafx.cpp  stdafx.h
samples/ComplexMesh/: CMakeLists.txt  ComplexMesh.cpp  MainFrm.h  SRComplexMesh.cpp  SRComplexMeshView.h  Timer.cpp
samples/Font/: CMakeLists.txt  Font.cpp
samples/Morph/: CMakeLists.txt  Morph.cpp
samples/ObjLoader/: CMakeLists.txt  ObjLoader.cpp
samples/PartOfSponza/: CMakeLists.txt  PartOfSponza.cpp
samples/PipelineStat/: CMakeLists.txt  PipelineStat.cpp
samples/SampleWindow/: SRSampleWindowView.h  Timer.cpp  Timer.h
samples/Sponza/: CMakeLists.txt  Sponza.cpp
samples/StandardShadowMap/: CMakeLists.txt  Draw.saps  Draw.savs  GenSM.saps  GenSM.savs  StandardShadowMap.cpp  gen_sm_pass.savs
samples/StencilMirror/: CMakeLists.txt  StencilMirror.cpp
samples/TextureAndBlending/: CMakeLists.txt  SRSampleWindow.cpp  SRSampleWindowView.h  TextureAndBlending.cpp
samples/Triangles/: CMakeLists.txt  Triangles.cpp
samples/VertexTextureFetch/: CMakeLists.txt  VertexTextureFetch.cpp
sasl/: CMakeLists.txt  ConfigureSASLProject.cmake  Makefile.SASL.xml  ReadMe.txt  Spirit_SASL.sln  Spirit_SASL.vcproj  TODO  test_code.txt
sasl/ast_generator/: ast_tree_generator.cpp  buildin_type_generator.cpp  statement_generator.cpp  utilities.h
sasl/ast_nodes/: ast_node_buildin_type.cpp  ast_node_declaration.h  ast_node_expression.cpp  ast_node_expression.h  ast_node_literal_expression.cpp  ast_node_statement.cpp  ast_node_statement.h  ast_node_type_qualifier.cpp
sasl/cmake/: ConfigurePath.cmake
sasl/doc/: L-R Value and semantic representation in SASL.docx  Name Mangling Syntax.docx  SASL VM指令集设计.docx  Tutorial.vsd
sasl/enums/: CMakeLists.txt  ast_node_types.cpp  buildin_type_code.cpp  buildin_type_code.h  buildin_types.h  builtin_type_code.h  builtin_types.cpp  builtin_types.h  codegen_depend.py  compiler_info_gen.bat  compiler_informations.cpp  compiler_informations.h  compiler_infos.cmake  compiler_infos.xml  compiler_infos_proj.xml  default_hasher.h  enum_base.h  enum_defs.xml  enum_defs.xsd  enum_gen_config.cmake  enum_gen_config.xml  enum_gens.kpf  enums.cmake  enums.xgp  enums.xgt  enums_generator.py  enums_helper.cpp  enums_helper.h  enums_utility.cpp  enums_utility.h  gen.bat  generate_enum.cmake  generate_file.cmake  integer_type_suffixes.h  jump_mode.cpp  jump_mode.h  labels.cpp  labels.h  literal_classifications.cpp  literal_classifications.h  (+19 more)
sasl/parsers/: assignment_expression.h  buildin_types.h  compound_statement.cpp  declaration.cpp  declaration.h  expression.cpp  expression_list.cpp  expression_list.h  identifier.cpp  initialized_declarator.h  initialized_declarator_list.h  parameter_declaration_part.h  parsers.h  program.cpp  (+6 more)
softart/: CMakeLists.txt  TODO
(+1690 files in other folders)
